--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -30,7 +30,7 @@
     <section class="home" id="home">
     <h1 class="home-text">
       hello, i'm <br />
-      <span>keerthi jakkali</span>
+      <span>keerthi</span>
     </h1>
     <p>this is my resume</p>
     </section>
